--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,6 @@ html, body{
     margin-right: 10%;
 }
 
-.column{
-    background-color: #00ADB5;
-    border-style: solid;
-    border-color: #EFFBFB;
-    border-width: 1px;
-}
-
 .topnav a {
     float: left;
     display: block;
@@ -85,10 +78,9 @@ html, body{
 
 .navbar-brand {
 	margin-bottom: -10px;
-	margin-top: -10px;
+	margin-top: 0px;
 	max-width: 77px;
 	background-color: #084B60;
-    pointer-events:none;
 }  
   
 .dropdown-content a:hover {
@@ -118,12 +110,22 @@ html, body{
 
 /* home */
 
-.column {
-    float: left;
-    width: 50%;
+* {
+    box-sizing: border-box;
 }
 
 /* Clear floats after the columns */
+
+.column {
+    background-color: #81BEF7; 
+    border-style: solid; 
+    border-color: #EFFBFB; 
+    border-width: 5px;
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 250px;
+}
 
 .row:after {
     content: "";
@@ -132,7 +134,9 @@ html, body{
 }
 
 @media screen and (max-width: 600px) {
-    .column {width: 100%;}
+    .column {
+        width: 50%;
+    }
 }
 
 /* progresso */
