--- a/css/style.css
+++ b/css/style.css
@@ -2,98 +2,251 @@ html, body{font-family: "Segoe UI",Arial,sans-serif;}
 .desempenho {font-family: "Segoe UI",Arial,sans-serif;}
 .tarefas {font-family: "Segoe UI",Arial,sans-serif;}
 .container {background-color: #EFFBFB;}
-h2 {font-family: "Segoe UI",Arial,sans-serif;}
+h2 {
+font-family: "Segoe UI",Arial,sans-serif;
+}
 /* Inicio navbar */
-.topnav {overflow: hidden;background-color: #084B60;}
-.body{margin-left: 10%;margin-right: 10%;}
-.topnav a {float: left;display: block;color: #f2f2f2;text-align: center;padding: 14px 16px;text-decoration: none;font-size: 17px;}
-.active {pointer-events:none;background-color: rgba(8, 75, 96, 0.75);color: white;}
-.topnav .icon {display: none;}
-.dropdown {float: left;overflow: hidden;}
-.dropdown .dropbtn {font-size: 17px;border: none;outline: none;color: white;padding: 14px 16px;background-color: inherit;font-family: inherit;margin: 0;}
-.dropdown-content {display: none;position: absolute;background-color: #f9f9f9;min-width: 160px;box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);z-index: 1;}
-.dropdown-content a {float: none;color: black;padding: 12px 16px;text-decoration: none;display: block;text-align: left;}
-.otobut{text-align:center;background-color:#81BEF7}
-.ootobut{text-align:center;background-color:#084B60; color: white;}
-.dados{background-color:#81BEF7;width:100%;}
-.h2c{text-align:center;font-family: sans-serif;}
-.logo{width: 100%;}
-.butedit{text-align:center;background-color:#81BEF7;}
-.barbd{width: 65%;}
-.bares{width: 82%;}
-.pd{display:flex;text-align:center;.space{padding: 20px;}
-.limpo{padding: 16px;}
-#lugares {width: 100%;}
-#lugares2 {width: 100%;}
-.dia{width: 10%;border-style: solid;border-collapse: collapse;border-width: 0.25px;border-color: white;text-align: center;background-color: grey;}
-.hora {width: 10%;border-style: solid;border-collapse: collapse;border-width: 0.25px;border-color: white;text-align: center;background-color: lightgray;}
-.f4 {background-color: paleturquoise;}
-.edf3 {background-color: lightcoral;}
-.pt {background-color: royalblue;}
-.quim {background-color: skyblue;}
-.es {background-color: tomato;}
-.dbo {background-color: greenyellow;}
-.mat {background-color: mediumaquamarine;}
-.bio {background-color: orchid;}
-.bd {background-color: blueviolet;}
-.hist {background-color: darkkhaki;}
-.geo {background-color: darkcyan;}
-.filo {background-color: chocolate;}
-.socio {background-color: brown;}
-.corpo {font-family: sans-serif;}
-.barmt3{width: 74%;}
-.barf4{width: 37%;}
-.gf{text-align:center; margin-left:auto; margin-right:auto;}
-.barc{width: 1%;}
-.cinco{width:55%;height:55;}
-.barc2{width:53%;}
-.barc3{width: 98%;}
-.o{width: 100%;}
-.grafi{background-color:#EFFBFB; width:100;}
-.c3{background-color:lightgray;width:100%;height:370px;}
-.e{margin-left:15%; margin-right:15%;}
-.txt{display:flex;text-align:center;}
-.row2{margin-left:5%; margin-right:5%;}
-.butf{display:flex;text-align:center;}
-.mn{background-color:#084B60;text-align:left;height:270px;margin-left:25%; margin-right:25%;}
-.ultcomun{margin-left:25%; margin-right:25%;background-color:#81BEF7;width:100%;}
-.doblebut{display:flex;text-align:center;}
-.butesc{background-color:#084B60;color:white;}
-.butcla{background-color:#81BEF7;float:right;}
-.c1{background-color:lightgray;width:100%;text-align:left;height:120px;}
-.c2{background-color:lightgray;width:100%;text-align:left;height:60px;}
-.topnav a:hover, .dropdown:hover .dropbtn {background-color: #084B60;color: white;}
-.navbar-brand {margin-bottom: -10px;margin-top: 0px;max-width: 77px;background-color: #084B60;}   
-.dropdown-content a:hover {background-color: #ddd;color: black;}
-.dropdown:hover .dropdown-content {display: block;}
+.topnav {
+    overflow: hidden;
+    background-color: #084B60;
+    }
+.body{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.active {
+    pointer-events:none;
+    background-color: rgba(8, 75, 96, 0.75);
+    color: white;
+}
+.topnav .icon {
+    display: none;
+}
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+.dropdown .dropbtn {
+    font-size: 17px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: #084B60;
+    color: white;
+}
+.navbar-brand {
+	margin-bottom: -10px;
+	margin-top: 0px;
+	max-width: 77px;
+	background-color: #084B60;
+}   
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+  color: black;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 /* responsividade do navbar (rules)*/ 
-@media screen and (max-width: 769px) {.topnav a:not(:first-child), .dropdown .dropbtn {display: none;}.topnav a.icon {float: right; display: block;}}
-@media screen and (max-width: 700px) {.topnav.responsive {position: relative;}.topnav.responsive .icon {position: absolute; right: 0; top: 0;}.topnav.responsive a {float: none; display: block; text-align: left;}.topnav.responsive .dropdown {float: none;}.topnav.responsive .dropdown-content {position: relative;}.topnav.responsive .dropdown .dropbtn {display: block; width: 100%; text-align: left;}}
+@media screen and (max-width: 769px) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {display: none;}
+    .topnav a.icon {float: right; display: block;}
+}
+@media screen and (max-width: 700px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {position: absolute; right: 0; top: 0;}
+    .topnav.responsive a {float: none; display: block; text-align: left;}
+    .topnav.responsive .dropdown {float: none;}
+    .topnav.responsive .dropdown-content {position: relative;}
+    .topnav.responsive .dropdown .dropbtn {display: block; width: 100%; text-align: left;}
+}
+
 /* Home */
 * {box-sizing: border-box;}
 /* Clear floats after the columns */
-.column {color: black;background-color: #81BEF7; border-style: solid; border-color: #EFFBFB; border-width: 5px;float: left;width: 50%;padding: 10px;height: 250px;text-align: center;}
-.row:after {content: "";display: table;clear: both;}
-@media screen and (max-width: 600px) {.column {width: 50%;}}
+.column {
+    color: black;
+    background-color: #81BEF7; 
+    border-style: solid; 
+    border-color: #EFFBFB; 
+    border-width: 5px;
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 250px;
+    text-align: center;
+}
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+@media screen and (max-width: 600px) {
+    .column {width: 50%;}
+}
+
 /* Progresso */
-.pieContainer {height: 100px;padding-left: 50%;}
-.pieBackground {background-color: #084B60;position: absolute;width: 100px;height: 100px;-moz-border-radius: 50px;-webkit-border-radius: 50px;-o-border-radius: 50px;border-radius: 50px;-moz-box-shadow: -1px 1px 3px #000;-webkit-box-shadow: -1px 1px 3px #000;-o-box-shadow: -1px 1px 3px #000;box-shadow: -1px 1px 3px #000;}
-.pie {position: absolute;width: 100px;height: 100px;-moz-border-radius: 50px;-webkit-border-radius: 50px;-o-border-radius: 50px;border-radius: 50px;clip: rect(0px, 50px, 100px, 0px);}
-.hold {position: absolute;width: 100px;height: 100px;-moz-border-radius: 50px;-webkit-border-radius: 50px;-o-border-radius: 50px;border-radius: 50px;clip: rect(0px, 100px, 100px, 50px);}
-#pieSlice1 .pie {background-color: #81BEF7;-webkit-transform:rotate(70deg);-moz-transform:rotate(70deg);-o-transform:rotate(70deg);transform:rotate(70deg);} 
-#myProgress {width: 100%;background-color: #81BEF7;}
-#myBar {width: 83%;height: 30px;background-color: #084B60;text-align: center;line-height: 30px;color: white;}
-/* desempenho */
-.tit {width: 10%;border-style: solid;border-collapse: collapse;border-width: 0.25px;border-color: white;text-align: center; background-color: grey;}
-.cont {width: 10%;border-style: solid;border-collapse: collapse;border-width: 0.25px;border-color: white;text-align: center;background-color: lightgray;}
+.pieContainer {
+    height: 100px;
+    padding-left: 50%;
+}
+.pieBackground {
+    background-color: #084B60;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -o-border-radius: 50px;
+    border-radius: 50px;
+    -moz-box-shadow: -1px 1px 3px #000;
+    -webkit-box-shadow: -1px 1px 3px #000;
+    -o-box-shadow: -1px 1px 3px #000;
+    box-shadow: -1px 1px 3px #000;
+}
+.pie {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -o-border-radius: 50px;
+    border-radius: 50px;
+    clip: rect(0px, 50px, 100px, 0px);
+}
+.hold {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -o-border-radius: 50px;
+    border-radius: 50px;
+    clip: rect(0px, 100px, 100px, 50px);
+}
+#pieSlice1 .pie {
+    background-color: #81BEF7;
+    -webkit-transform:rotate(70deg);
+    -moz-transform:rotate(70deg);
+    -o-transform:rotate(70deg);
+    transform:rotate(70deg);
+} 
+#myProgress {
+    width: 100%;
+    background-color: #81BEF7;
+  }
+#myBar {
+    width: 83%;
+    height: 30px;
+    background-color: #084B60;
+    text-align: center;
+    line-height: 30px;
+    color: white;
+}
+ /* desempenho */
+
+ .tit {
+    width: 10%;
+	border-style: solid;
+	border-collapse: collapse;
+	border-width: 0.25px;
+    border-color: white;
+    text-align: center; 
+    background-color: grey;
+}
+.cont {
+    width: 10%;
+    border-style: solid;
+    border-collapse: collapse;
+    border-width: 0.25px;
+    border-color: white;
+    text-align: center;
+    background-color: lightgray;
+}
+
 /* tarefas */
-.tar {width: 450px;height: 100px;border-style: solid;border-collapse: collapse;border-width: 0.25px;border-color: white;text-align: right;background-color: lightgray;padding: 20px;}
+.tar {
+    width: 450px;
+    height: 100px;
+    border-style: solid;
+    border-collapse: collapse;
+    border-width: 0.25px;
+    border-color: white;
+    text-align: right;
+    background-color: lightgray;
+    padding: 20px;
+}
+
 /* galeria */
+
+
 /* Home */
 * {box-sizing: border-box;}
 /* Clear floats after the columns */
-.column2 {color: black;background-color: #81BEF7; border-style: solid;border-color: #EFFBFB; border-width: 5px;float: left;width: 50%;padding: 10px;height: 250px;text-align: center;}
-.row2:after {content: "";display: table;clear: both;}
-@media screen and (max-width: 600px) {.column2 {width: 50%;}}
-.column2 {color: black;background-color: #81BEF7; border-style: solid; border-color: #EFFBFB; border-width: 5px;float: left;width: 50%;padding: 10px;height: 250px;text-align: center;}
-@media screen and (max-width: 600px) {.column3 {width: 50%;}}
+.column2 {
+    color: black;
+    background-color: #81BEF7; 
+    border-style: solid; 
+    border-color: #EFFBFB; 
+    border-width: 5px;
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 250px;
+    text-align: center;
+}
+.row2:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+@media screen and (max-width: 600px) {
+    .column2 {width: 50%;}
+}
+.column2 {
+    color: black;
+    background-color: #81BEF7; 
+    border-style: solid; 
+    border-color: #EFFBFB; 
+    border-width: 5px;
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 250px;
+    text-align: center;
+}
+@media screen and (max-width: 600px) {
+    .column3 {width: 50%;}
+}
