--- a/css/style.css
+++ b/css/style.css
@@ -147,11 +147,11 @@ font-family: "Segoe UI",Arial,sans-serif;
 .gf{text-align:center; margin-left:auto; margin-right:auto;}
 .barc{width: 98%;}
 .barc4{width: 1%;}
-.cinco{width:55%;height:55;}
+.cinco{width:55%;height:55%;}
 .barc2{width:53%;}
 .barc3{width: 98%;}
 .o{width: 100%;}
-.grafi{background-color:#EFFBFB; width:100;}
+.grafi{background-color:#EFFBFB; width:100%;}
 .c3{background-color:lightgray;width:100%;height:370px;}
 .e{margin-left:15%; margin-right:15%;}
 .txt{display:flex;text-align:center;}
